--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,33 @@
 <resources>
     <string name="app_name">Slumgum</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">John Smith</string>
+    <string name="nav_header_subtitle">john@smith.me</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <!-- EDIT TEXTS -->
     <string name="first_name">First name</string>
     <string name="last_name">Last Name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="create_act">Create</string>
+
+    <!-- CTAs-->
     <string name="login">Login</string>
+    <string name="create_account">Create account</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="reset_password">Send password reset email</string>
+
+    <!-- MESSAGES -->
+    <string name="enter_all_details">Please, enter all details.</string>
+    <string name="authentication_failed">Incorrect email or password, please try again.</string>
+    <string name="general_error">An error occurred, please try again.</string>
+    <string name="verification_email_sent_error">Failed to send verification email.</string>
+    <string name="verification_email_sent_success">Verification email sent to %s.</string>
+    <string name="reset_email_sent_success">Email sent. Please check your inbox to reset the password.</string>
+    <string name="reset_email_sent_failed">No user found with this email address.</string>
+
+
 </resources>
