--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="reset_password">Send password reset email</string>
 
-    <!-- MESSAGES -->
+    <!-- MESSAGES & ERRORS -->
     <string name="enter_all_details">Please, enter all details.</string>
     <string name="authentication_failed">Incorrect email or password, please try again.</string>
     <string name="general_error">An error occurred, please try again.</string>
@@ -29,6 +29,6 @@
     <string name="verification_email_sent_success">Verification email sent to %s.</string>
     <string name="reset_email_sent_success">Email sent. Please check your inbox to reset the password.</string>
     <string name="reset_email_sent_failed">No user found with this email address.</string>
-
+    <string name="verify_your_email">Please, verify your email address. Check your inbox!</string>
 
 </resources>
