Added initial setup upload image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,10 @@
     <!-- CTAs-->
     <string name="login">Login</string>
     <string name="create_account">Create account</string>
-    <string name="forgot_password">Forgot Password?</string>
+    <string name="forgot_password">Forgot password?</string>
     <string name="reset_password">Send password reset email</string>
+    <string name="report_swarm">Report swarm</string>
+    <string name="choose_photo">Choose photo</string>
 
     <!-- MESSAGES & ERRORS -->
     <string name="enter_all_details">Please, enter all details.</string>
